# kg-registry

./: .gitignore  .goosehints  .linkml-reference-validator.yaml  AGENTS.md  FILE_SIZE_IMPLEMENTATION.md  LICENSE.md  Makefile  README-sitedev.md  README.md  _config.yml  _config_header.yml  advanced-search.html  compare.md  data-quality-dashboard.html  data-quality-scoring.html  index.html  kg-registry-kg.md  kg.Makefile  mkdocs.yml  organizations.html  pyproject.toml  registry.yaml  setup.py  sonar-project.properties  tox.ini
.agents/: settings.json
.claude-plugin/: marketplace.json
.github/: ai-controllers.json  copilot-instructions.md
.well-known/: ai-catalog.json
_data/: schema.yaml
_includes/: doi_helper.html  footer.html  head.html  header.html  ontology_table.html  resource_table.html  scripts.html  table_widget.html
_layouts/: default.html  eval_detail.html  graph_visualization.html  intro_doc.html  ontology_detail.html  organization_detail.html  product_detail.html  resource_detail.html  schema_doc.html
cache/: frink_registry_cache.yaml  kgregistry-infores.sssom.tsv  obo_foundry_cache.yml  publication_reference_validation.yml  quality_url_status_cache.yml  url_status_cache.yml
docs/: duckdb_backend.md  external-syncs.md  index.md  kg-registry-kg-clean.md  kg-registry-kg.md  obo-foundry-sync.md  parquet_backend.md  reference-validation.md
evals/: eval_descriptions.tsv  evals.tsv  evals_automated.tsv
kg_registry/: __version__.py
kgmetadata/: automat-kp.md  biolink.md  cam-kp.md  chr.md  clinical-data-kp.md  connections-hypothesis-kp.md  drkg.md  drugbank.md  ecosim.md  genetics-kp.md  goldterms.md  hgnc.md  icees-kg.md  interpro.md  kg-covid-19.md  kg-idg.md  (+21 more)
(+6553 files in other folders)
